# cloudsql-eventarc

./: .gitignore  Dockerfile  create-trigger.sh  pyproject.toml
app/: main.py  utils.py
db/migrations/: 20210906155128_init.sql  20210906155335_create_events_table.sql  20210906155825_create_stored_proc.sql  20210906160220_create_notify_function.sql  20210906160446_create_trigger.sql
terraform/: main.tf  output.tf  provider.tf  variables.tf
